@@ -1,10 +1,9 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.builders.impl;
 
-import com.intellij.util.SmartList;
-import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Unmodifiable;
 import org.jetbrains.jps.builders.BuildTarget;
 import org.jetbrains.jps.builders.BuildTargetRegistry;
 import org.jetbrains.jps.builders.BuildTargetType;
@@ -17,42 +16,45 @@ import java.util.*;
 
 @ApiStatus.Internal
 public final class BuildTargetRegistryImpl implements BuildTargetRegistry {
-  private final List<BuildTarget<?>> myAllTargets;
-  private final Map<BuildTargetType<?>, List<? extends BuildTarget<?>>> myTargets;
-  private final Map<JpsModule, List<ModuleBasedTarget>> myModuleBasedTargets;
+  private final @Unmodifiable List<BuildTarget<?>> allTargets;
+  private final @Unmodifiable Map<BuildTargetType<?>, List<? extends BuildTarget<?>>> targets;
+  private final @Unmodifiable Map<JpsModule, List<ModuleBasedTarget<?>>> moduleBasedTargets;
 
   public BuildTargetRegistryImpl(JpsModel model) {
-    myTargets = new HashMap<>();
-    myModuleBasedTargets = new HashMap<>();
-    List<List<? extends BuildTarget<?>>> targetsByType = new ArrayList<>();
+    Map<BuildTargetType<?>, List<? extends BuildTarget<?>>> targets = new HashMap<>();
+    Map<JpsModule, List<ModuleBasedTarget<?>>> moduleBasedTargets = new HashMap<>();
+    List<BuildTarget<?>> allTargets = new ArrayList<>();
     for (BuildTargetType<?> type : TargetTypeRegistry.getInstance().getTargetTypes()) {
-      List<? extends BuildTarget<?>> targets = type.computeAllTargets(model);
-      myTargets.put(type, targets);
-      targetsByType.add(targets);
-      for (BuildTarget<?> target : targets) {
+      List<? extends BuildTarget<?>> targetsPerType = type.computeAllTargets(model);
+      targets.put(type, targetsPerType);
+      allTargets.addAll(targetsPerType);
+      for (BuildTarget<?> target : targetsPerType) {
         if (target instanceof ModuleBasedTarget) {
-          final ModuleBasedTarget t = (ModuleBasedTarget)target;
-          final JpsModule module = t.getModule();
-          List<ModuleBasedTarget> list = myModuleBasedTargets.get(module);
+          ModuleBasedTarget<?> t = (ModuleBasedTarget<?>)target;
+          JpsModule module = t.getModule();
+          List<ModuleBasedTarget<?>> list = moduleBasedTargets.get(module);
           if (list == null) {
             list = new ArrayList<>();
-            myModuleBasedTargets.put(module, list);
+            moduleBasedTargets.put(module, list);
           }
           list.add(t);
         }
       }
     }
-    myAllTargets = ContainerUtil.concat(targetsByType);
+    this.targets = Map.copyOf(targets);
+    this.moduleBasedTargets = Map.copyOf(moduleBasedTargets);
+    this.allTargets = List.copyOf(allTargets);
   }
 
   @Override
   public @NotNull Collection<ModuleBasedTarget<?>> getModuleBasedTargets(@NotNull JpsModule module, @NotNull BuildTargetRegistry.ModuleTargetSelector selector) {
-    final List<ModuleBasedTarget> targets = myModuleBasedTargets.get(module);
+    final List<ModuleBasedTarget<?>> targets = moduleBasedTargets.get(module);
     if (targets == null || targets.isEmpty()) {
-      return Collections.emptyList();
+      return List.of();
     }
-    final List<ModuleBasedTarget<?>> result = new SmartList<>();
-    for (ModuleBasedTarget target : targets) {
+
+    List<ModuleBasedTarget<?>> result = new ArrayList<>();
+    for (ModuleBasedTarget<?> target : targets) {
       switch (selector) {
         case ALL:
           result.add(target);
@@ -74,11 +76,11 @@ public final class BuildTargetRegistryImpl implements BuildTargetRegistry {
   @Override
   public @NotNull <T extends BuildTarget<?>> List<T> getAllTargets(@NotNull BuildTargetType<T> type) {
     //noinspection unchecked
-    return (List<T>)myTargets.get(type);
+    return (List<T>)targets.getOrDefault(type, List.of());
   }
 
   @Override
   public @NotNull List<BuildTarget<?>> getAllTargets() {
-    return myAllTargets;
+    return allTargets;
   }
 }
