@@ -1,4 +1,4 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.model.module.impl;
 
 import org.jetbrains.annotations.NotNull;
@@ -12,47 +12,48 @@ import org.jetbrains.jps.util.JpsPathUtil;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Set;
 
 public final class JpsModuleSourceRootImpl<P extends JpsElement> extends JpsCompositeElementBase<JpsModuleSourceRootImpl<P>> implements JpsTypedModuleSourceRoot<P> {
-  private final JpsModuleSourceRootType<P> myRootType;
-  private final String myUrl;
+  private final JpsModuleSourceRootType<P> rootType;
+  private final String url;
 
   public JpsModuleSourceRootImpl(String url, JpsModuleSourceRootType<P> type, P properties) {
     super();
-    myRootType = type;
+    rootType = type;
     myContainer.setChild(type.getPropertiesRole(), properties);
-    myUrl = url;
+    this.url = url;
   }
 
+  @SuppressWarnings("deprecation")
   private JpsModuleSourceRootImpl(JpsModuleSourceRootImpl<P> original) {
     super(original);
-    myRootType = original.myRootType;
-    myUrl = original.myUrl;
+    rootType = original.rootType;
+    url = original.url;
   }
 
   @Override
-  public <P extends JpsElement> P getProperties(@NotNull JpsModuleSourceRootType<P> type) {
-    if (myRootType.equals(type)) {
+  public <T extends JpsElement> T getProperties(@NotNull JpsModuleSourceRootType<T> type) {
+    if (rootType.equals(type)) {
       //noinspection unchecked
-      return (P)myContainer.getChild(myRootType.getPropertiesRole());
+      return (T)myContainer.getChild(rootType.getPropertiesRole());
     }
     return null;
   }
 
   @Override
-  public @Nullable <P extends JpsElement> P getProperties(@NotNull Set<? extends JpsModuleSourceRootType<P>> types) {
-    if (types.contains(myRootType)) {
-      return (P)getProperties();
+  public @Nullable <T extends JpsElement> T getProperties(@NotNull Set<? extends JpsModuleSourceRootType<T>> types) {
+    if (types.contains(rootType)) {
+      //noinspection unchecked
+      return (T)getProperties();
     }
     return null;
   }
 
   @Override
-  public @Nullable <P extends JpsElement> JpsTypedModuleSourceRoot<P> asTyped(@NotNull JpsModuleSourceRootType<P> type) {
+  public @Nullable <T extends JpsElement> JpsTypedModuleSourceRoot<T> asTyped(@NotNull JpsModuleSourceRootType<T> type) {
     //noinspection unchecked
-    return myRootType.equals(type) ? (JpsTypedModuleSourceRoot<P>)this : null;
+    return rootType.equals(type) ? (JpsTypedModuleSourceRoot<T>)this : null;
   }
 
   @Override
@@ -62,36 +63,45 @@ public final class JpsModuleSourceRootImpl<P extends JpsElement> extends JpsComp
 
   @Override
   public JpsElementType<?> getType() {
-    return myRootType;
+    return rootType;
   }
 
   @Override
   public @NotNull P getProperties() {
-    return myContainer.getChild(myRootType.getPropertiesRole());
+    return myContainer.getChild(rootType.getPropertiesRole());
   }
 
   @Override
   public @NotNull JpsModuleSourceRootType<P> getRootType() {
-    return myRootType;
+    return rootType;
   }
 
   @Override
   public @NotNull String getUrl() {
-    return myUrl;
+    return url;
   }
 
   @Override
   public @NotNull File getFile() {
-    return JpsPathUtil.urlToFile(myUrl);
+    return JpsPathUtil.urlToFile(url);
   }
 
   @Override
   public @NotNull Path getPath() {
-    return Paths.get(JpsPathUtil.urlToPath(myUrl));
+    return Path.of(JpsPathUtil.urlToPath(url));
   }
 
+  @SuppressWarnings("removal")
   @Override
   public @NotNull JpsModuleSourceRootImpl<P> createCopy() {
     return new JpsModuleSourceRootImpl<>(this);
+  }
+
+  @Override
+  public String toString() {
+    return "JpsModuleSourceRootImpl(" +
+           "rootType=" + rootType +
+           ", url='" + url + '\'' +
+           ')';
   }
 }
